--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 /* Global */
 
 * {
-  font-family: Avenir, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-family: 'Titillium Web', sans-serif;
+    user-select: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 /* Chats Page */
@@ -47,16 +49,27 @@
 /* Login Page */
 
 #login__page {
-  background-image: linear-gradient(#40a9ff, #096dd9);
-  position: absolute;
+  /* background: #1FA2FF;  
+  background: -webkit-linear-gradient(to top, #A6FFCB, #12D8FA, #1FA2FF);  
+  background: linear-gradient(to top, #A6FFCB, #12D8FA, #1FA2FF);  */
+  background-image: url("./lines_minimalist_square_artistic_purple_hd_abstract.jpg");
+
+background-repeat: no-repeat;
+background-size: cover;
+
+  /* position: absolute;
   top: 0px;
   bottom: 0px;
   left: 0px;
-  right: 0px;
+  right: 0px; */
+  width:100vw; 
+  height:100vh;
+  display:grid;
+  place-items: center;
 }
 
 #login__card {
-  position: relative;
+  /* position: relative;
   top: calc(50vh - 144px);
   left: calc(50vw - 210px);
   padding-top: 36px;
@@ -64,8 +77,58 @@
   width: 420px;
   text-align: center;
   background-color: white;
+  border-radius: 22px; */
+  background: inherit;
+  
+  /* backdrop-filter: blur(1px); */
+  width: 420px;
+  height:50vh;
   border-radius: 22px;
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  justify-content: center;
+  gap:0.5rem;
+  position: relative;
+  z-index: 10;
+  box-shadow:  0 0 10px rgb(171, 35, 235);
+ 
 }
+
+/* #login__card:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow:  0 0 5px rgba(255, 255, 255, 0.5);
+  filter: blur(10px);
+  width: 420px;
+  height:40vh;
+}  */
+.login__card__heading{
+  background: #ADA996;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  text-align: center;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -o-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 30px;
+  
+}
+.login__card__heading h2{
+font-size : 50px;
+  font-weight: 800;
+  
+  letter-spacing: 0.5rem;
+ 
+}
+
 
 .login__button {
   cursor: pointer;
@@ -73,16 +136,21 @@
   padding: 12px;
   border-radius: 8px;
   display: inline-block;
+  /* margin-top:10px; */
 }
 
 .facebook {
-  background-color: #3b5998;
+  /* background-color: #4499e9; */
+  color: white;
 }
 
 .google {
-  background-color: #0a8d48;
+  /* background-color: #0ece67; */
   color: white;
+  padding: 12px 20px;
 }
+
+
 
 #loading-container {
   position: absolute;
@@ -98,4 +166,25 @@
   position: relative;
   left: calc(50vw - 33px);
   top: calc(50vh - 22px);
+}
+
+@media (max-width: 768px) {
+
+  #login__card{
+
+    width: 320px;
+  height:40vh;
+  }
+}
+@media (max-width:1024px){
+  
+#login__page{
+  place-items: top center;
+}
+  #login__card{
+    
+    width: 420px;
+  height:40vh;
+  }
+
 }
